force-app/main/default/objects/SEBCase__c/fields/ReferredtoAgency__c.field-meta.xml
<CustomField>
    <fullName>ReferredtoAgency__c</fullName>
    <description>PacPoint-JB110118 - Created for BREG phase 1</description>
    <label>Referred to Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alabama Securities</fullName>
            </value>
            <value>
                <fullName>Alaska Securities</fullName>
            </value>
            <value>
                <fullName>Arizona Securities</fullName>
            </value>
            <value>
                <fullName>Arkansas Securities</fullName>
            </value>
            <value>
                <fullName>Attorney General - State of Hawaii</fullName>
            </value>
            <value>
                <fullName>California Securities</fullName>
            </value>
            <value>
                <fullName>Canada/International</fullName>
            </value>
            <value>
                <fullName>Colorado Securities</fullName>
            </value>
            <value>
                <fullName>Commodoties &amp; Futures Trading Commission</fullName>
            </value>
            <value>
                <fullName>Connecticut Securities</fullName>
            </value>
            <value>
                <fullName>Consumer Financial Protection Bureau</fullName>
            </value>
            <value>
                <fullName>Defense Criminal Investigative Service</fullName>
            </value>
            <value>
                <fullName>Delaware Securities</fullName>
            </value>
            <value>
                <fullName>Department of Taxation</fullName>
            </value>
            <value>
                <fullName>District of Columbia Securities</fullName>
            </value>
            <value>
                <fullName>Division of Financial Institutions - State of Hawaii</fullName>
            </value>
            <value>
                <fullName>Federal Bureau of Investigation</fullName>
            </value>
            <value>
                <fullName>Federal Trade Commission</fullName>
            </value>
            <value>
                <fullName>Financial Industry Regulation Authority</fullName>
            </value>
            <value>
                <fullName>Florida Securities</fullName>
            </value>
            <value>
                <fullName>Georgia Securities</fullName>
            </value>
            <value>
                <fullName>Hawaii Prosecutor&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Hilo Police Department</fullName>
            </value>
            <value>
                <fullName>Honolulu Police Department</fullName>
            </value>
            <value>
                <fullName>Honolulu Prosecutor&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Idaho Securities</fullName>
            </value>
            <value>
                <fullName>Illinois Securities</fullName>
            </value>
            <value>
                <fullName>Indiana Securities</fullName>
            </value>
            <value>
                <fullName>Insurance Division - State of Hawaii</fullName>
            </value>
            <value>
                <fullName>Insurance Fraud - State of Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>