force-app/main/default/objects/SEBCase__c/fields/RelatedSEBCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedSEBCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Related SEB Case</label>
    <referenceTo>SEBCase__c</referenceTo>
    <relationshipLabel>SEB Cases</relationshipLabel>
    <relationshipName>SEBCases</relationshipName>
    <type>Lookup</type>
</CustomField>