force-app/main/default/objects/SEBCase__c/fields/RelevantDocumentExplanation__c.field-meta.xml
<CustomField>
    <fullName>RelevantDocumentExplanation__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If documents are not attached, explain why you are not providing documents to support your complaint.</inlineHelpText>
    <label>8b. Relevant Document Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>