force-app/main/default/objects/SEBCase__c/fields/RelevantDocumentsAttached__c.field-meta.xml
<CustomField>
    <fullName>RelevantDocumentsAttached__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Please attach relevant documentation to support your complaint.</inlineHelpText>
    <label>8a. Relevant Documents Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>