force-app/main/default/objects/SEBCase__c/fields/RespondentFEIN__c.field-meta.xml
<CustomField>
    <fullName>RespondentFEIN__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent FEIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>