force-app/main/default/objects/SEBCase__c/fields/RespondentFirstName__c.field-meta.xml
<CustomField>
    <fullName>RespondentFirstName__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>