force-app/main/default/objects/SEBCase__c/fields/RespondentLastName__c.field-meta.xml
<CustomField>
    <fullName>RespondentLastName__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>