force-app/main/default/objects/SEBCase__c/fields/RespondentPhone__c.field-meta.xml
<CustomField>
    <fullName>RespondentPhone__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent Phone</label>
    <type>Phone</type>
</CustomField>