force-app/main/default/objects/SEBCase__c/fields/RespondentsBusinessName__c.field-meta.xml
<CustomField>
    <fullName>RespondentsBusinessName__c</fullName>
    <description>PacPoint-IC121818 - Created for BREG phase 1</description>
    <label>Respondent&apos;s Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>