force-app/main/default/objects/SEBCase__c/fields/RespondentState__c.field-meta.xml
<CustomField>
    <fullName>RespondentState__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>