force-app/main/default/objects/SEBCase__c/fields/RespondentStreet__c.field-meta.xml
<CustomField>
    <fullName>RespondentStreet__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent Street</label>
    <type>TextArea</type>
</CustomField>