force-app/main/default/objects/SEBCase__c/fields/RespondentZip__c.field-meta.xml
<CustomField>
    <fullName>RespondentZip__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent Zip</label>
    <length>30</length>
    <type>Text</type>
</CustomField>