force-app/main/default/objects/SEBCase__c/fields/Restitution_Amount_Still_Due__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Amount_Still_Due__c</fullName>
    <formula>RestitutionAssessed__c -  RestitutionCollected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restitution Amount Still Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>