force-app/main/default/objects/SEBCase__c/fields/RestitutionAssessed__c.field-meta.xml
<CustomField>
    <fullName>RestitutionAssessed__c</fullName>
    <description>PacPoint-RA110518 - Created for BREG phase 1</description>
    <label>Total Restitution/Rec Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>