force-app/main/default/objects/SEBCase__c/fields/RestitutionCollected__c.field-meta.xml
<CustomField>
    <fullName>RestitutionCollected__c</fullName>
    <description>PacPoint-RA110518 - Created for BREG phase 1</description>
    <label>Restitution Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>