force-app/main/default/objects/SEBCase__c/fields/RetentionDate__c.field-meta.xml
<CustomField>
    <fullName>RetentionDate__c</fullName>
    <description>&quot;PacPoint:AC201217 - Case 12182 - BREG SEC/SEB Support Year 2 - Field to capture date of file retention for SEB Case</description>
    <label>Retention Date</label>
    <type>Date</type>
</CustomField>