force-app/main/default/objects/SEBCase__c/fields/SEBCaseAutonumber__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseAutonumber__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <displayFormat>{0000}</displayFormat>
    <label>SEB Case Autonumber</label>
    <type>AutoNumber</type>
</CustomField>