force-app/main/default/objects/SEBCase__c/fields/SEBCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseNumber__c</fullName>
    <description>PacPoint-RA012519-BREG Phase 1</description>
    <label>SEB Case Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>