force-app/main/default/objects/SEBCase__c/fields/SettlementAgencyorCourt__c.field-meta.xml
<CustomField>
    <fullName>SettlementAgencyorCourt__c</fullName>
    <description>PacPoint-RA110118-BREG Phase 1</description>
    <inlineHelpText>If you answered yes to 6a, what agency or Court (provide the name and address of person contacted)?</inlineHelpText>
    <label>6b. Settlement Agency or Court?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>