force-app/main/default/objects/SEBCase__c/fields/SettlementAttemptDetails__c.field-meta.xml
<CustomField>
    <fullName>SettlementAttemptDetails__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If you answered yes to 5a, provide detailed facts on your attempt. Include date complained and name and title of person to whom you complained.</inlineHelpText>
    <label>5b. Settlement Attempt Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>