force-app/main/default/objects/SEBCase__c/fields/SettlementattemptedwithCourts__c.field-meta.xml
<CustomField>
    <fullName>SettlementattemptedwithCourts__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Have you attempted to settle your complaint with another agency or with the Courts? If yes, what agency or Court (provide the name and address of person contacted)?</inlineHelpText>
    <label>6a. Settlement attempted with Courts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>