force-app/main/default/objects/SEBCase__c/fields/SettlementAttemptedwithRespondent__c.field-meta.xml
<CustomField>
    <fullName>SettlementAttemptedwithRespondent__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Have you attempted to settle your complaint with the Respondent?</inlineHelpText>
    <label>5a.Settlement Attempted with Respondent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>