force-app/main/default/objects/SEBCase__c/fields/Still_Collecting_Restitution_Payments__c.field-meta.xml
<CustomField>
    <fullName>Still_Collecting_Restitution_Payments__c</fullName>
    <formula>Restitution_Amount_Still_Due__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Still Collecting Restitution Payments?</label>
    <type>Checkbox</type>
</CustomField>