force-app/main/default/objects/SEBCase__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S001 - Advance Fee Loan Program</fullName>
                <label>Advance Fee Loan Program</label>
            </value>
            <value>
                <fullName>V038 - Affinity Fraud</fullName>
                <label>Affinity Fraud</label>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>V025 - Auction Rate Securities</fullName>
                <label>Auction Rate Securities</label>
            </value>
            <value>
                <fullName>V048 - Binary Options</fullName>
                <label>Binary Options</label>
            </value>
            <value>
                <fullName>V001 - Bond</fullName>
                <label>Bond</label>
            </value>
            <value>
                <fullName>S020 - Book &amp; Records</fullName>
                <label>Book &amp; Records</label>
            </value>
            <value>
                <fullName>A002 - Broker - Dealer Agent</fullName>
                <label>Broker - Dealer Agent</label>
            </value>
            <value>
                <fullName>A001 - Broker - Dealer Firm</fullName>
                <label>Broker - Dealer Firm</label>
            </value>
            <value>
                <fullName>V002-Certificate of Dep. for a Security</fullName>
                <label>Certificate of Dep. for a Security</label>
            </value>
            <value>
                <fullName>V003-Certificate of Int./Participation</fullName>
                <label>Certificate of Int./Participation</label>
            </value>
            <value>
                <fullName>Charging unreasonable commissions/compensation</fullName>
            </value>
            <value>
                <fullName>S018 - Charitable Gifting Program</fullName>
                <label>Charitable Gifting Program</label>
            </value>
            <value>
                <fullName>V004 - Collateral Trust Certificate</fullName>
                <label>Collateral Trust Certificate</label>
            </value>
            <value>
                <fullName>S002 - Commodity (Coins, Foreign Currency, Gemstones, Livestock, PR)</fullName>
                <label>Commodity</label>
            </value>
            <value>
                <fullName>Convicted of any felony/misdemeanors</fullName>
            </value>
            <value>
                <fullName>V056 - Crowd Funding</fullName>
                <label>Crowd Funding</label>
            </value>
            <value>
                <fullName>V036-Cryptocurrency/Intial Coin Offering</fullName>
                <label>Cryptocurrency/Intial Coin Offering</label>
            </value>
            <value>
                <fullName>Crypto Staking</fullName>
            </value>
            <value>
                <fullName>Cybersecurity/Information Security</fullName>
            </value>
            <value>
                <fullName>Dealing with unregistered persons</fullName>
            </value>
            <value>
                <fullName>V005 - Debenture</fullName>
                <label>Debenture</label>
            </value>
            <value>
                <fullName>Deceptive or misleading advertising</fullName>
            </value>
            <value>
                <fullName>Digital Assets</fullName>
            </value>
            <value>
                <fullName>V039 - E2 Visa Fraud</fullName>
                <label>E2 Visa Fraud</label>
            </value>
            <value>
                <fullName>V040 - EB-5 Visa Fraud</fullName>
                <label>EB-5 Visa Fraud</label>
            </value>
            <value>
                <fullName>Elder Exploitation-Account Restricted</fullName>
            </value>
            <value>
                <fullName>Elder Exploitation-Disbursement Hold</fullName>
            </value>
            <value>
                <fullName>S019 - Elder Issues</fullName>
                <label>Elder Issues</label>
            </value>
            <value>
                <fullName>Energy Scam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>