force-app/main/default/objects/SEBCase__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SEC Referral</fullName>
            </value>
            <value>
                <fullName>SEB Referral</fullName>
            </value>
            <value>
                <fullName>Other Agency Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>