force-app/main/default/objects/SEBCase__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <description>PacPoint-IC051419 - Created for BREG phase 1
Calculates the Timeframe based on the Timeframe Count Months field. Returns how many months has passed.</description>
    <formula>IF( 
TimeframeCountMonths__c &lt;&gt; -1, 

IF(TimeframeCountMonths__c &lt; 6, &quot;0-6 months&quot;, &quot;&quot;)+ 
IF(TimeframeCountMonths__c &gt;= 6 &amp;&amp; TimeframeCountMonths__c &lt; 12 , &quot;6-12 months&quot;, &quot;&quot;)+ 
IF(TimeframeCountMonths__c &gt;= 12 &amp;&amp; TimeframeCountMonths__c &lt; 18 , &quot;12-18 months&quot;, &quot;&quot;)+ 
IF(TimeframeCountMonths__c &gt;= 18 &amp;&amp; TimeframeCountMonths__c &lt; 24 , &quot;18-24 months&quot;, &quot;&quot;)+ 
IF(TimeframeCountMonths__c &gt;= 24 , &quot;&gt; 24 months&quot;, &quot;&quot;), 

&quot;&quot; 
)</formula>
    <label>Timeframe</label>
    <type>Text</type>
</CustomField>