force-app/main/default/objects/SEBCase__c/fields/TimeFrameCountLastMonth__c.field-meta.xml
<CustomField>
    <fullName>TimeFrameCountLastMonth__c</fullName>
    <formula>IF(
DateOfLastMonth__c &gt;= DATEVALUE( CurrentStatusDateTime__c ),

(
FLOOR(((DateOfLastMonth__c - DATEVALUE( CurrentStatusDateTime__c )) / 365 * 12))
),

-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Frame Count Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>