force-app/main/default/objects/SEBCase__c/fields/TimeFrameCountLastMonthDateReceived__c.field-meta.xml
<CustomField>
    <fullName>TimeFrameCountLastMonthDateReceived__c</fullName>
    <formula>IF(
DateOfLastMonth__c &gt;=   DateReceived__c  ,

(
FLOOR(((DateOfLastMonth__c -  DateReceived__c ) / 365 * 12))
),

-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Frame Count Last Month (Date Rece)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>