force-app/main/default/objects/SEBCase__c/fields/TimeframeCountMonths__c.field-meta.xml
<CustomField>
    <fullName>TimeframeCountMonths__c</fullName>
    <description>PacPoint-IC051419 - Created for BREG phase 1
This is used on the Timeframe field calculation. 
If today is greater than the Current Status Date/Time, count the months passed. 
If not, pass -1 value.</description>
    <formula>IF( 
TODAY() &gt;= DATEVALUE( CurrentStatusDateTime__c ), 

( 
FLOOR(((TODAY() - DATEVALUE( CurrentStatusDateTime__c )) / 365 * 12))
), 

-1)</formula>
    <label>Timeframe Count Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>