force-app/main/default/objects/SEBCase__c/fields/TimeframeCountMonthsDateReceived__c.field-meta.xml
<CustomField>
    <fullName>TimeframeCountMonthsDateReceived__c</fullName>
    <description>PacPoint-AC102720 - Case# 11590 - Created for DCCA BREG SEC/SEB Support Year 2</description>
    <formula>IF(
TODAY() &gt;=   DateReceived__c  ,

(
FLOOR(((TODAY() -  DateReceived__c ) / 365 * 12))
),

-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeframe Count Months (Date Received)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>