force-app/main/default/objects/SEBCase__c/fields/TimeframeLastMonth__c.field-meta.xml
<CustomField>
    <fullName>TimeframeLastMonth__c</fullName>
    <formula>If(TimeFrameCountLastMonth__c &lt;&gt; -1, Case(Floor(TimeFrameCountLastMonth__c/6), 0, &quot;0-6 months&quot;, 1, &quot;6-12 months&quot;, 2, &quot;12-18 months&quot;, 3, &quot;18-24 months&quot;, &quot;&gt; 24 months&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeframe Last Month</label>
    <type>Text</type>
</CustomField>