force-app/main/default/objects/SEBCase__c/fields/Total_of_Allegation_Violations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Allegation_Violations__c</fullName>
    <description>Counts the # of related Allegations with a corresponding Allegation Violation record.</description>
    <label>Total # of Allegation Violations</label>
    <summaryFilterItems>
        <field>Allegation__c.Total_of_Allegation_Violations__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Allegation__c.SEBCaseID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>