force-app/main/default/objects/SEBCase__c/fields/Total_of_Allegations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Allegations__c</fullName>
    <description>Counts the total # of related Allegation records.</description>
    <label>Total # of Allegations</label>
    <summaryForeignKey>Allegation__c.SEBCaseID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>