force-app/main/default/objects/SEBCase__c/fields/Total_of_Case_Contact_Allegations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Case_Contact_Allegations__c</fullName>
    <description>Count of the related Case Contact records that have a corresponding Allegation.</description>
    <label>Total # of Case Contact Allegations</label>
    <summaryFilterItems>
        <field>SEBCaseContact__c.Total_of_Allegations__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SEBCaseContact__c.Role__c</field>
        <operation>equals</operation>
        <value>Respondent</value>
    </summaryFilterItems>
    <summaryForeignKey>SEBCaseContact__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>