force-app/main/default/objects/SEBCase__c/fields/Total_of_Case_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Case_Contacts__c</fullName>
    <description>Counts the # of related Case Contact records.</description>
    <label>Total # of Case Contacts</label>
    <summaryFilterItems>
        <field>SEBCaseContact__c.Role__c</field>
        <operation>equals</operation>
        <value>Respondent</value>
    </summaryFilterItems>
    <summaryForeignKey>SEBCaseContact__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>