force-app/main/default/objects/SEBCase__c/fields/Total_of_Completed_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Completed_Transactions__c</fullName>
    <description>Total # of transactions related to the case with a Status of Completed.</description>
    <label>Total # of Completed Transactions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>