force-app/main/default/objects/SEBCase__c/fields/Total_of_Legal_Actions__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Legal_Actions__c</fullName>
    <description>Counts all Case Contacts that are Respondents with a Legal Action record.</description>
    <label>Total # of Legal Actions</label>
    <summaryFilterItems>
        <field>SEBCaseContact__c.Role__c</field>
        <operation>equals</operation>
        <value>Respondent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SEBCaseContact__c.Total_of_Legal_Actions__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>SEBCaseContact__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>