force-app/main/default/objects/SEBCase__c/fields/Total_of_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Transactions__c</fullName>
    <description>Total # of transactions related to the case.</description>
    <label>Total # of Transactions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>