force-app/main/default/objects/SEBCase__c/fields/TotalNumberCaseTeam__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberCaseTeam__c</fullName>
    <description>PacPoint-JB103118 - Created for BREG phase 1: Used in Process Builder to automate Intake Status email to Case Team members</description>
    <label>Total Number Case Team</label>
    <summaryFilterItems>
        <field>SEBCaseTeam__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>SEBCaseTeam__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>