force-app/main/default/objects/SEBCase__c/fields/TotalSEBCaseExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalSEBCaseExpenses__c</fullName>
    <description>PacPoint-LC121318 - Created for BREG phase 1</description>
    <label>Total SEB Case Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>