force-app/main/default/objects/SEBCase__c/fields/TotalSEBCaseHours__c.field-meta.xml
<CustomField>
    <fullName>TotalSEBCaseHours__c</fullName>
    <description>PacPoint-LC121318 - Created for BREG phase 1</description>
    <label>Total SEB Case Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>